--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
     margin-right: 100px;
   
 }
+.App:hover{
+  background-color: rgb(145, 187, 207);
+ }
 .text{
  
   width: 200px;
@@ -17,7 +20,7 @@
 }
 .search {
   text-align: center;
-  background-color:rgb(227, 231, 237);
+  background-color:rgb(164, 176, 194);
   border-color: #4ca7c0;
   text-decoration: solid;
   width: 200px;
@@ -31,8 +34,11 @@
   margin-left: 30px;
   
 }
+.search:hover{
+  background-color: white;
+}
 .area1{
-  background-color:rgb(227, 231, 237);
+  background-color:rgb(164, 176, 194);
   border: none;
   font-size: 12;
   height: 40px;
@@ -41,6 +47,9 @@
   box-shadow: 0px 0px 8px;
   margin-left: 1px ;
   
+}
+.area1:hover{
+  background-color:white ;
 }
 .delete{
   width: 50px; /* Set a fixed width for the button */
@@ -109,11 +118,14 @@ border: none;
   font-size: 20px;
   margin-left: 30px;
   text-align: center;
-  color:rgb(50, 62, 16);
+  color:rgb(24, 24, 23);
   padding: 50 px;
 
 }
+.App1:hover{
+  background-color: rgb(145, 187, 207);
 
+}
 
 .App-link {
   color: #61dafb;
